--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
   },
   "homepage": "https://github.com/ghkdsigm/mokaPoop#readme",
   "dependencies": {
+    "@tensorflow/tfjs-node": "^4.22.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "node-webcam": "^0.8.2",
     "ws": "^8.18.0"
   }
 }
