--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.1",
+    "jimp": "^0.22.10",
     "node-webcam": "^0.8.2",
     "ws": "^8.18.0"
   }
